2005-09-26  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (map_sequence_function_t, map_sequence): export to clisp.h
	* modules/rawsock/rawsock.c (MAKE-SOCKADDR): use them to accept
	arbitrary sequences as DATA instead of requiring a byte vector

2005-09-26  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (check_buffer_arg): removed
	(parse_buffer_arg): accept arbitrary vectors
	(BUFFER, RESIZE-BUFFER): removed
	(MAKE-SOCKADDR, RECVFROM, SENDTO): modified for the
	parse_buffer_arg() change
	(IPCSUM, ICMPCSUM, TCPCSUM, UDPCSUM): buffer argument is now required
	* modules/rawsock/sock.lisp (sockaddr-data): return a vector
	displaced to the underlying data structure

2005-09-26  Sam Steingold  <sds@gnu.org>

	* socket.d (resolve_host): init offset before array_displace_check()
	* modules/berkeley-db/bdb.c (check_gid): ditto

2005-09-26  Sam Steingold  <sds@gnu.org>

	* error.d (check_byte_vector_replacement): added
	* lispbibl.d (MAKE_CHECK_LOW): tweak to be more general
	(check_byte_vector_replacement): prototype and export to clisp.h
	* stream.d (test_n_bytes_args): use check_uint32() and
	check_byte_vector()
	* modules/berkeley-db/bdb.c (check_byte_vector): replaced with
	check_byte_vector_len(), use check_byte_vector()

2005-09-25  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (GETUID, %SETUID, GETGID, %SETGID)
	(GETEUID, %SETEUID, GETEGID, %SETEGID): implemented
	* modules/syscalls/posix.lisp (getuid, getgid, geteuid, getegid):
	exported and DEFSETFed
	* modules/syscalls/configure.in (gid_t, uid_t): AC_CHECK_SIZEOF
	(getegid, geteuid, getgid, getuid, setegid, seteuid, setgid, setuid):
	AC_CHECK_FUNCS

2005-09-25  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/sock.lisp (resize-buffer): export
	* modules/rawsock/rawsock.c (SENDTO): fixed STACK cleanup
	(RECV, RECVFROM, RECVMSG, SEND, SENDMSG, SENDTO): removed "MSG_"
	prefix from the &key arguments

2005-09-23  Sam Steingold  <sds@gnu.org>
