@@ -170,8 +170,11 @@ Sockets are represented by their &fixnum-t; &file-des;s.</para>
    or <function role="unix">inet_pton</function>.
 </simpara></listitem></varlistentry>
 <varlistentry id="make-sockaddr"><term><code>(RAWSOCK:MAKE-SOCKADDR
-   <replaceable>family</replaceable> &data-r;)</code></term>
+   <replaceable>family</replaceable> &optional-amp; &data-r;)</code></term>
  <listitem><simpara>Create a <type>sockaddr</type> object.
+   &data-r; should be a sequence of &unsigned-byte-8; or an &integer-t;
+   (meaning <code>(&make-list; &data-r; :initial-element 0)</code>).
+   When omitted, the standard platform-specific size is used.
 </simpara></listitem></varlistentry>
 <varlistentry><term><code>(RAWSOCK:SOCKADDR-FAMILY &addr-r;)</code></term>
  <listitem><simpara>Return the numeric family of the
