@@ -152,3 +152,10 @@ T
 
 (rawsock:sendto *sock* *buffer* *sa-remote*)
 1024
+
+;;; linux only??
+;(integerp (show (setq *sock* (rawsock:socket :INET :PACKET 3)))) T
+;(rawsock:sockaddr-p (show (setq *sa-local* (rawsock:make-sockaddr :PACKET)))) T
+;(listp (multiple-value-list
+;        (show (rawsock:recvfrom *sock* *buffer* *sa-local*))))
+;T
